# excel.vim

./: .gitignore  README.md
plugin/: excel.py  excel.vim
rs/: Cargo.toml
rs/src/: coord.rs  display.rs  error.rs  formula.rs  main.rs  model.rs  save_logic.rs  sheet_ops.rs  table.rs  xlsx_read.rs  xlsx_write.rs
src/: excel.py
