[package]
name = "excel"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
[[bin]]
name = "excel"
path = "src/main.rs"
[dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = "0.31"
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
